# scrubbber_slam_CMES

m3/cmake/: CMakeLists.txt  build.sh  build_gem.sh  install.sh  install_onsite.sh  packages.cmake
m3/src/: CMakeLists.txt
m3/src/app/: CMakeLists.txt  dump_and_merge_db_data.cc  dump_db_data.cc  merge_db.cc  pcd_intensity_remap.cc  sqlit_db_to_bin.cc  update_db_id.cc
m3/src/app/mapping_server/: mapping_client.cc  mapping_client.h  mapping_command.cc  mapping_server.cc  mapping_server.h
m3/src/app/quick_debug/: CMakeLists.txt  issues.md
m3/src/app/quick_debug/src/: color_interp.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  map_data_loader.cc  map_data_loader.h  mapping_interface.cc  mapping_interface.h  optimizationdialog.cpp  optimizationdialog.h  optimizationdialog.ui  qddisplaywidget.cc  qddisplaywidget.h  quick_debug.pro  quickdebugmainwindow.cpp  quickdebugmainwindow.h  quickdebugmainwindow.ui
m3/src/common/: CMakeLists.txt  candidate.h  car_type.h  circular_buffer.h  common_func.h  constants.h  function_point.h  gps_status_def.h  keyframe.cc  keyframe.h  mapping_math.h  mapping_point_types.h  merge_info.h  message_def.h  ndt_origin_data.h  num_type.h  origin_files.h  origin_point_info.h  pose_rpy.h  std_headers.h  timed_pose.h  topics_def.h  track_pose.h  trajectory.cc  trajectory.h  utm_coordinates.h  vehicle_calib_param.h  version.h  wgs84_coordinates.h
m3/src/common/msg/: CMakeLists.txt
m3/src/common/msg/avos_new/: CMakeLists.txt  package.xml
m3/src/common/msg/avos_x/: CMakeLists.txt  package.xml
m3/src/common/msg/cloud_msgs/: CMakeLists.txt
m3/src/common/msg/common_msgs/: CMakeLists.txt  package.xml
m3/src/common/msg/ivactuator/: CMakeLists.txt  package.xml
m3/src/common/msg/ivapp/: CMakeLists.txt  package.xml
m3/src/core/: CMakeLists.txt
m3/src/core/coordinate_transform/: gps_trans.cc  gps_trans.h
m3/src/core/dead_reckoning/: average_elements.h  dr.cc  dr.h  dr_constants.h  dr_elements.h  dr_impl.h  dr_params.h  end_dr_elements.h  imu_elements.h  imu_variance_elements.h  odom_elements.h
m3/src/core/lidar_matching/: lidar_matching.h
m3/src/core/mem_control/: mem_control.cc  mem_control.h
m3/src/core/mt_search/: mt_search_param.h  multi_thread_search.cc  multi_thread_search.h
m3/src/core/optimization/: calib_edge.h  edge_se3_height_prior.h  edge_se3_rot_prior.h
m3/src/core/scan_context/: scan_context.cc  scan_context.h
m3/src/gem/: CMakeLists.txt  run_check_in.cc  run_checkout.cc  run_data_fetching.cc  run_dr_frontend.cc  run_lidar_frontend.cc  run_loop_compute.cc  run_loop_detect.cc  run_merge_map.cc  run_opti_s1.cc  run_opti_s2.cc  run_preprocessing.cc
m3/src/io/: CMakeLists.txt  db_io.cc  db_io.h  db_rw.cc  db_rw.h  file_io.cc  file_io.h  io.h  oss_io.cc  oss_io.h  xml_io.cc  xml_io.h  yaml_io.cc  yaml_io.h
m3/src/pipeline/: CMakeLists.txt  pipeline_context.cc  pipeline_context.h  pipeline_engine.cc  pipeline_engine.h  task_info.h
m3/src/pipeline/check_in/: check_in.cc  check_in.h  file_filter.cc  file_filter.h
m3/src/pipeline/check_out/: check_out.cc  check_out.h
m3/src/pipeline/data_fetching/: data_fetching.cc  data_fetching.h
m3/src/pipeline/dr_frontend/: dr_frontend.cc  dr_frontend.h
m3/src/pipeline/lidar_frontend/: lidar_frontend.cc  lidar_frontend.h
m3/src/pipeline/loop_closing/: loop_closing.cc  loop_closing.h  loop_closing_impl.h
m3/src/pipeline/merge_map/: merge_map.cc  merge_map.h
m3/src/pipeline/optimization_s1/: optimization_params.h  optimization_s1.cc  optimization_s1.h  optimization_s1_impl.h
m3/src/pipeline/optimization_s2/: optimization_s2.cc  optimization_s2.h  optimization_s2_impl.h
m3/src/pipeline/preprocessing/: bag_convert.cc  bag_convert.h  preprocessing.cc  preprocessing.h
m3/src/pipeline/validation/: validation.cc  validation.h  validation_impl.h
m3/src/tools/: CMakeLists.txt  tools.h
m3/src/tools/gmm_map_generator/: gmm_map_generator.h  gmm_map_io.cc  gmm_map_io.h  gmm_map_struct.h  idp_gmm_map_generator.cc  idp_gmm_map_generator.h  lads_gmm_map_generator.cc  lads_gmm_map_generator.h  tiles_gmm_map_generator.cc  tiles_gmm_map_generator.h
m3/src/tools/intensity_calib/: common_struct.h  intensity_calibrator.cc  intensity_calibrator.h  io.cc  io.h
m3/src/tools/map_splitter/: map_splitter.cc  map_splitter.h  map_splitter_base.h  map_splitter_common.h
m3/src/tools/perception_interface/: interface.cc  interface.h  interface_test.cc  pcl_compensator.cc  pcl_compensator.h
m3/src/tools/pointcloud_convert/: compensator.cc  compensator.h  hesai_pc_convertor.cc  hesai_pc_convertor.h  packets_parser.cc  packets_parser.h  pc_convertor.cc  pc_convertor.h  suteng_irad_pc_convertor.cc  suteng_irad_pc_convertor.h  suteng_pc_convertor.cc  suteng_pc_convertor.h
m3/src/ui/: CMakeLists.txt
m3/src/ui/build-mapping-ui-unknown-Debug/: ui_mainwindow.h
m3/src/ui/debug-ui/: CMakeLists.txt  debug-ui.pro  debug_ui_mainwindow.cpp  debug_ui_mainwindow.h  debug_ui_mainwindow.ui  main.cpp  功能描述.md
m3/src/ui/mapping-ui/: logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapping-ui.pro
mark/dr/: CMakeLists.txt  dr_constant.h  dr_pre_integration.cc  dr_pre_integration.h
mark/lidar16/: CMakeLists.txt  lego_loam_interface.cc  lego_loam_interface.h  ml_frame.cc  ml_frame.h  ml_submap.cc  ml_submap.h  ml_tracking.cc  ml_tracking.h  ml_tracking_impl.h  occupancy_mapping.cc  occupancy_mapping.h
mark/lidar16/lidar_matching/: lidar_matching.h
mark/lidar16/lidar_matching/feature_matching/: local_mapper.cc  local_mapper.h  local_mapper_impl.h  matching_param.cc  matching_param.h
mark/lidar16/lidar_matching/lego_loam/: featureAssociation.cpp  feature_association.cc  feature_association.h  image_projection.cc  image_projection.h
mark/lidar16/loop_closing/: ml_loop_closing.cc  ml_loop_closing.h  ml_loop_closing_impl.h
mark/lidar16/loop_closing/mt_search/: mt_search_param.h  multi_thread_search.cc  multi_thread_search.h  multi_thread_search_参考.cc  multi_thread_search_参考.h
mark/lidar16/map_saver/: map_saver.cc  map_saver.h
(+273 files in other folders)
