add_subdirectory(common_msgs)
add_subdirectory(monitor_msgs)
add_subdirectory(velodyne_msgs)
add_subdirectory(avos_new)
add_subdirectory(avos_x)
add_subdirectory(cloud_msgs)
add_subdirectory(ivactuator)
add_subdirectory(ivapp)
add_subdirectory(ivlocmsg)
add_subdirectory(new_ivapp)
add_subdirectory(x_ivapp)
add_subdirectory(new_ivsensorgps)
add_subdirectory(new_velodyne_msgs)
add_subdirectory(ivcanbus)
add_subdirectory(mainstream_msgs)
add_subdirectory(lads)
add_subdirectory(lads_velodyne_msgs)
#add_subdirectory(suteng_irad)

