<?xml version="1.0"?>
<package>
  <name>mainstream_msgs</name>
  <version>0.0.0</version>
  <description>The mainstream_msgs package</description>

  <maintainer email="nvidia@todo.todo">nvidia</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>common_msgs</build_depend>
  <run_depend>common_msgs</run_depend>

  <build_depend>ivcanbus</build_depend>
  <run_depend>ivcanbus</run_depend>

  <build_depend>ivlocmsg</build_depend>
  <run_depend>ivlocmsg</run_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
